Refactored Project to allow for domains to be in different projects. Also refactored the classes based on inheritance

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /LifeInCode/obj/Debug
 /LifeInCode/LifeInCode.csproj.user
 /LifeInCode/LifeInCode.v12.suo
+/LifeInCode/LifeInCode.Animals.csproj.user
