--- a/LifeInCode.Environment/LifeInCode.Environment.csproj
+++ b/LifeInCode.Environment/LifeInCode.Environment.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F2F22DCC-4F68-48B3-988D-25D807A82B81}</ProjectGuid>
+    <ProjectGuid>{E059AC52-A639-487B-B439-A0F0D7BFA7E6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LifeInCode</RootNamespace>
-    <AssemblyName>LifeInCode</AssemblyName>
+    <RootNamespace>LifeInCode.Environment</RootNamespace>
+    <AssemblyName>LifeInCode.Environment</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,10 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal.cs" />
-    <Compile Include="Gender.cs" />
-    <Compile Include="Mammals\Humans\Human.cs" />
-    <Compile Include="Mammals\Mammal.cs" />
+    <Compile Include="Earth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
