--- a/LifeInCode.Animals/LifeInCode.Animals.csproj
+++ b/LifeInCode.Animals/LifeInCode.Animals.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F2F22DCC-4F68-48B3-988D-25D807A82B81}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LifeInCode</RootNamespace>
-    <AssemblyName>LifeInCode</AssemblyName>
+    <RootNamespace>LifeInCode.Animals</RootNamespace>
+    <AssemblyName>LifeInCode.Animals</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
